test/invalid-syntax/sit/no-name.djs
classy Foo
    sit much arg
    wow
wow
